--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,10 @@
             <artifactId>choco-solver</artifactId>
             <version>4.10.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
     </dependencies>
 </project>
