--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
   			<artifactId>SPARQL-JAVA</artifactId>
   			<version>1.0.9</version>
 		</dependency>
+		<dependency>
+   			<groupId>org.hibernate</groupId>
+   			<artifactId>hibernate-core</artifactId>
+   			<version>5.4.30.Final</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
