--- a/lab10-server/pom.xml
+++ b/lab10-server/pom.xml
@@ -12,4 +12,16 @@
 		<maven.compiler.target>11</maven.compiler.target>
 		<antlr4.version>4.9</antlr4.version>
 	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>guru.nidi</groupId>
+			<artifactId>graphviz-java</artifactId>
+			<version>0.18.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.30</version>
+		</dependency>
+	</dependencies>
 </project>
