Create the prototype as javap does

--- a/lab12/src/main/resources/META-INF/testconfig.properties
+++ b/lab12/src/main/resources/META-INF/testconfig.properties
@@ -1,2 +1,2 @@
-path=/home/antonio/workspace/advanced-programming/lab11-server/
-class=spring.App
+path=/home/antonio/workspace/advanced-programming/lab12/
+class=framework.Loader
